# student-management-console-app

./: CMakeLists.txt  MenuUtils.hpp  README.md  allcode.cpp  autopush.sh  main.cpp
docs/: project-feactures.md
include/: ExcelUtils.hpp  MenuUtils.hpp  Student.hpp
src/: ExcelUtils.cpp  MenuUtils.cpp  Student.cpp  main.cpp
